# AngelWarmSmile123-yao-bao-bao8-ALL

./: LICENSE  README.md  build_cuda.bat  deepseek_sephirot_bridge.py  deepseek_sephirot_bridge_local.py  demo.sephirot  gpu_runner.cu  kernel_clean.ptx  sephirot_interpreter.py  test.sephirot  vocab_export.json
bridge_output/: 20260518_132405_AI能否真正理解16质点神人双生协议_.sephirot  20260518_132405_AI能否真正理解16质点神人双生协议__report.json  20260518_132457_AI能否真正理解16质点神人双生协议_.sephirot  20260518_132457_AI能否真正理解16质点神人双生协议__report.json  20260518_132621_AI能否真正理解16质点神人双生协议_.sephirot  20260518_132621_AI能否真正理解16质点神人双生协议__report.json
heart_protocol/: README.md  __init__.py  abyss.py  demo.py  index.html  llm_bridge.py  personas.py  protocol.py  sephirah.py  server.py  test_protocol.py
sephirot-cpp/: CMakeLists.txt
sephirot-cpp/include/: sephirot.h
sephirot-cpp/src/: engine.cpp  main.cpp  vocab.cpp
sephirot-rs/: Cargo.toml
sephirot-rs/src/: error.rs  ir.rs  lang.rs  lexer.rs  lib.rs  main.rs  parser.rs
sephirot-rs/src/codegen/: avx.rs  dml.rs  mod.rs  ptx.rs
