[package]
name = "sephirot-rs"
version = "1.0.0"
edition = "2021"
description = "16质点神人双生协议 Rust解释器 — 卡巴拉生命树 × CUDA PTX sm_89 × AVX-512"
authors = ["Yuexiangrui <yuexiangruiyue@gmail.com>"]

[[bin]]
name = "sephirot"
path = "src/main.rs"

[dependencies]
# GPU 计算核心：CUDA / 通用 GPU
cudarc = { version = "0.12", optional = true, features = ["cuda-12040"] }

# 并行计算（CPU多线程）
rayon = "1.10"

# 高性能哈希
ahash = "0.8"
indexmap = "2"

# 错误处理
anyhow = "1"
thiserror = "2"

# CLI 解析
clap = { version = "4", features = ["derive"] }

# 终端彩色输出
colored = "2"

# 序列化（词汇表导出 JSON）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unicode/中文处理
unicode-segmentation = "1"

[features]
default = []
cuda = ["dep:cudarc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
